# letcom

./: .gitignore  Cargo.toml  README.md  debug.sh  release.sh  run.sh
examples/: step.rs
src/: app.rs  controller.rs  main.rs  ui.rs
src/controller/: letter.rs  settings.rs  signals.rs
src/data_handler/: attached_file.rs  data_container.rs  handler.rs  letter.rs  mod.rs  persona.rs  tag.rs
src/ui/: utils.rs
src/ui/dialogs/: mod.rs  open_file.rs  remove_alerts.rs  remove_persona.rs
src/ui/forms/: editpersona.rs  email.rs  letter.rs  mod.rs  selectpersona.rs  selecttag.rs  sendletter.rs  settings.rs  tag.rs
src/ui/menus/: email.rs  mod.rs  persona.rs  tag.rs
